add chapter 3 /LA

--- a/LA/Lectures/lec_6.tex
+++ b/LA/Lectures/lec_6.tex
@@ -310,3 +310,4 @@ The \redbox{row space} of $A$ (the subspace spanned by the rows of $A$), $\mathc
     But in general, $\mathcal{C}(A) \neq \mathcal{C}(U)$.
 \end{proposition}
 
+\newpage
