--- a/LA/Lectures/lec_7.tex
+++ b/LA/Lectures/lec_7.tex
@@ -313,6 +313,8 @@ skip
 \section{Linear Transformation}
 We have seen that a matrix move subspaces around. For example, $A$ maps $\mathcal{N}(A)$ to the \blue{zero vector} and move all vectors into its \blue{column space} $\mathcal{C}(A)$. Let $A$ be an $n \times n$ matrix and $x \in \mathbb{R}^n$, so $A$ transforms $x$ into \blue{$Ax \in \mathcal{C}(A)$}.
 
+\subsection{Notation of Linear Transformation}
+
 \begin{eg}
     Here are some examples of linear transformations:
     \begin{enumerate}[label=$\arabic*^\circ$]
