--- a/LA/header.tex
+++ b/LA/header.tex
@@ -142,7 +142,7 @@
 	mdframed={
 			linewidth=2pt,
 			rightline=false, topline=false, bottomline=false,
-			linecolor=Goldenrod!80!black, backgroundcolor=Goldenrod!5,
+			linecolor=Goldenrod!80!black, backgroundcolor=Goldenrod!10,
 			nobreak=false
 		}
 ]{thmred3box}
@@ -277,9 +277,9 @@
 	\normalfont \topsep-2\p@\@plus6\p@\relax
 	\trivlist
 	\item[\hskip\labelsep
-	            \color{RawSienna!70!black}\sffamily\bfseries
+	            \color{Goldenrod!70!black}\sffamily\bfseries
 	            #1\@addpunct{.}]\ignorespaces
-	\begin{mdframed}[linewidth=2pt,rightline=false, topline=false, bottomline=false,linecolor=RawSienna, backgroundcolor=RawSienna!1]
+	\begin{mdframed}[linewidth=2pt,rightline=false, topline=false, bottomline=false,linecolor=Goldenrod!70!black, backgroundcolor=Goldenrod!1]
 		}{%
 		\popQED\endtrivlist\@endpefalse
 	\end{mdframed}
