--- a/IntroComputation/Lectures/lec_6.tex
+++ b/IntroComputation/Lectures/lec_6.tex
@@ -1,4 +1,4 @@
-\lecture{7}{2025-10-27}{}
+\lecture{6}{2025-10-27}{}
 
 \section{Chomsky Normal Form}
 
@@ -204,7 +204,7 @@ If the input is $0011$ which is same as $\varepsilon 0011 \varepsilon$, the proc
 \subsection{Formal definition of PDA}
 
 \begin{definition}[Pushdown Automata]
-    A \textbf{pushdown automaton} (PDA) is a 6-tuple \((Q, \Sigma, \Gamma, \delta, q_0, F)\), where
+    A \textbf{pushdown automaton} (PDA) is a 6-tuple \[(Q, \Sigma, \Gamma, \delta, q_0, F)\], where
     \begin{itemize}
         \item \(Q\): States
         \item \(\Sigma\): Input alphabet
@@ -804,29 +804,3 @@ The new PDA will accept the string $a$ but the original PDA rejects it. Hence, w
     \end{tikzpicture}
     \caption{PDA with single accept state and empty stack before accepting}
 \end{figure}
-
-% \section{Deterministic Pushdown Automata}
-
-% \chapter{The Church-Turing Thesis}
-
-% \section{Turing Machines}
-% \section{Multitape Turing Machines}
-% \section{Nondeterministic Turing Machines}
-% \section{Hilbert's problems}
-
-% \chapter{Decidability}
-
-% \section{Decidability}
-% \section{Halting Problem}
-
-% \chapter{Reducibility}
-
-% \section{Reducibility}
-% \section{Computation Histories}
-
-% \chapter{Complexity Theory}
-
-% \section{Big-O Notation}
-% \section{Time Complexity}
-% \section{Languages in P}
-% \section{Languages in NP}
