--- a/IntroComputation/IntroComputation.tex
+++ b/IntroComputation/IntroComputation.tex
@@ -15,11 +15,17 @@
 
 \begin{abstract}
     The lecture note of 2025 Fall Introduction to Computation Theory by professor 林智仁.
+    \vspace{5em}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.9\textwidth]{Figures/abstract.jpg}
+    \end{figure}
 \end{abstract}
 
 \newpage
 
 \tableofcontents
+
 
 \setcounter{chapter}{-1}
 
