--- a/IntroComputation/Lectures/lec_6.tex
+++ b/IntroComputation/Lectures/lec_6.tex
@@ -260,6 +260,8 @@ For example, we say the transition of $q_2 \to q_3$ to be \[
     \delta(q_2, 1, 0) = \{(q_3, \varepsilon)\}
 \]
 
+\newpage
+
 \subsection{Nondeterministic situation}
 
 \begin{eg}
