--- a/IntroComputation/Lectures/lec_7.tex
+++ b/IntroComputation/Lectures/lec_7.tex
@@ -128,7 +128,7 @@ To find this transition table, for instance,
         \end{tabular}
     \end{center}
     due to \[
-        \delta(q_2, 1, \varepsilon) = \delta(q_2, \varepsilon, 0) = \delta(q_2, \varepsilon, \varepsilon) = \emptyset
+        \delta(q_2, 1, \varepsilon) = \delta(q_2, \varepsilon, \$) = \delta(q_2, \varepsilon, \varepsilon) = \emptyset
     \]
     Formally we have \[
         \delta(q_2, 1, \$) = (q_r, \varepsilon)
