--- a/ADA/header.tex
+++ b/ADA/header.tex
@@ -252,6 +252,10 @@
 \declaretheorem[style=thmpinkbox, name=Problem, numberwithin=section]{problem}
 \declaretheorem[style=thmpinkbox, name=Problem, numbered=no]{problem*}
 \declaretheorem[style=thmblue2box, name=Claim, numbered=no]{claim}
+\declaretheorem[style=conjpurplebox, name=Comment, numbered=no]{com}
+\declaretheorem[style=conjpurplebox, name=Observation, numbered=no]{obs}
+\declaretheorem[style=thmgreen3box, name=Recall, numbered=no]{recall}
+\declaretheorem[style=thmredbox, name=Algorithm, numbered=no]{idea}
 \declaretheorem[style=conjpurplebox, name=Conjecture, numberwithin=section]{conjecture}
 
 \renewcommand\theHdefinition{\thesection.\arabic {definition}}
