--- a/Calculus TA/Mistake/TAHour.tex
+++ b/Calculus TA/Mistake/TAHour.tex
@@ -60,7 +60,7 @@ Find the following the indefinite integral
 \begin{problem}
 Find the following the indefinite integral
 \[
-	\int \frac{5}{[(ax)^2 + b^2]^{3/2}} \text{d} x
+	\int \frac{5}{[(ax)^2 - b^2]^{3/2}} \text{d} x
 \]
 \end{problem}
 \vspace{-12pt}
